<resources>
    <string name="app_name">Bazaar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Log in</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="signup">Sign up</string>
    <string name="register">Register</string>
    <string name="emailMe">Email me</string>
    <string name="forgotPassword">Forgot password</string>
    <string name="top_app_bar">Bazaar</string>
    <string name="username">Username</string>
    <string name="phoneNumber">Phone number</string>
    <string name="publish">Publish</string>
    <string name="filter">Filter</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="orderButton">Order now</string>
    <string name="inactive">Inactive</string>
</resources>